# http-observatory

./: docker-compose.yml
httpobs/database/: database.py  schema.sql
httpobs/scanner/: Dockerfile  local.py  main.py  pyproject.toml  utils.py
httpobs/scanner/analyzer/: content.py  decorators.py  headers.py  misc.py  utils.py
httpobs/scanner/conf/: __init__.py  httpobs.conf
httpobs/scanner/retriever/: retriever.py
httpobs/website/: api.py  utils.py
