[tool.poetry]
name = "http-observatory-scanner"
version = "0.9.3"
description = "HTTP Observatory: a set of tests and tools to scan your website for basic web hygeine."
license = "MPL-2.0"
authors = ["April King <april@mozilla.com>"]
maintainers = ["Leo McArdle <leo@mozilla.com>"]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
publicsuffixlist = "^0.10.0.20231002"
requests = "^2.31.0"
functions-framework = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
